# ragon

./: .gitignore  README.md  architecture.mmd
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a1b2c3d4_add_sources_to_chatmessage.py
backend/app/: __init__.py  main.py
backend/app/auth/: __init__.py  models.py  router.py  schemas.py
backend/app/chat/: models.py  router.py  schemas.py
backend/app/collection/: models.py  router.py  schemas.py
backend/app/core/: __init__.py  cache_monitor.py  cache_service.py  database.py  exceptions.py  logging_config.py  middleware.py  migration_manager.py  progress_service.py  router.py  security.py  service_manager.py
backend/app/document/: models.py  router.py  schemas.py
backend/app/rag/: __init__.py  config.py  router.py  schemas.py  service.py  utils.py  visualization.py
backend/app/rag/helpers/: __init__.py  embeddings.py
backend/app/rag/processors/: __init__.py  processor.py
backend/app/rag/services/: __init__.py  ai_utils.py  chains.py  retrieval.py
backend/scripts/: cleanup_milvus.py  cli.py  download_models.py
backend/tests/: README.md  test_api.py
docker/: 01-milvus.yml  02-ollama.yml  03-postgres.yml  04-open-webui.yml  05-pgadmin.yml  06-nginx.yml  07-redis.yml  README.md  add-user-to-docker.sh  nginx.conf  rebuild.sh  redis.conf  restart.sh  start.sh  stop.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  (+1 more)
(+51 files in other folders)
