[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.125.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-milvus>=0.3.2",
    "langchain-ollama>=1.0.1",
    "phonemizer>=3.3.0",
    "pymilvus>=2.6.5",
    "pypdf>=6.4.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "redis>=5.0.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "sqlmodel>=0.0.27",
    "alembic>=1.13.0",
    "uvicorn>=0.38.0",
    "websockets>=13.0.0",
    "phonemizer>=3.0.0",
    "sentencepiece>=0.2",
    "passlib>=1.7",
    "sacremoses>=0.1",
    "numpy>=2.4.1",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "cachetools>=7.0.0",
    "accelerate>=1.12.0",
    "onnxruntime>=1.24.1",
]
